test/Fail/Issue3855c.err
error: [UnsolvedConstraints]
Failed to solve the following constraints:
  b =< ?0 : Bool (blocked on _b_5, belongs to problem 10)
  record {} = r : RB ?0 (blocked on problem 10)

Issue3855c.agda:15.29-34: error: [UnsolvedInteractionMetas]
Unsolved interaction metas at the following locations:
  Issue3855c.agda:15.29-34
